[project]
name = "rag-institute"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepeval>=3.2.4",
    "dotenv>=0.9.9",
    "google-generativeai>=0.3.0",
    "langchain>=0.3.26",
    "langchain-experimental>=0.3.4",
    "langchain-neo4j>=0.4.0",
    "langchain-ollama>=0.3.3",
    "llama-index==0.9.48",
    "llama-index-embeddings-gemini>=0.3.2",
    "llama-index-embeddings-google>=0.3.1",
    "llama-index-embeddings-ollama>=0.6.0",
    "llama-index-llms-gemini>=0.5.0",
    "llama-index-llms-ollama>=0.6.2",
    "llama-index-vector-stores-neo4jvector>=0.3.0",
    "matplotlib>=3.10.3",
    "neo4j>=5.28.1",
    "pip-system-certs>=5.2",
    "plotly>=6.2.0",
    "pymupdf>=1.26.3",
    "ragas>=0.2.15",
    "streamlit>=1.46.1",
    "yfiles-jupyter-graphs>=1.10.7",
]
